force-app/main/default/src/objects/MVN_MDM_Object_Setting__mdt/MVN_MDM_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <description>MDM Object setting mapping</description>
    <label>MDM Object Setting</label>
    <pluralLabel>MDM Object Settings</pluralLabel>
</CustomObject>