force-app/main/default/src/objects/MVN_MDM_Object_Setting__mdt/fields/MVN_MDM_Connection__c.field-meta.xml
<CustomField>
    <fullName>MVN_MDM_Connection__c</fullName>
    <description>MDM Connect which uses the Object setting.</description>
    <label>MDM Connection</label>
    <referenceTo>MVN_MDM_Connection__mdt</referenceTo>
    <relationshipLabel>MDM Object Settings</relationshipLabel>
    <relationshipName>MVN_MDM_Object_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>