force-app/main/default/src/objects/MVN_MDM_Object_Setting__mdt/fields/MVN_MDM_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_MDM_Object_Name__c</fullName>
    <label>MDM Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>