force-app/main/default/src/objects/MVN_MDM_Object_Setting__mdt/fields/MVN_SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_SObject_API_Name__c</fullName>
    <description>Salesforce Object API Name</description>
    <label>SObject API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>